# BuildABoxEngine

./: .gitattributes  .gitignore  .gitmodules  README.md
Engine/: CMakeLists.txt
Engine/DocumentationExample/: CMakeLists.txt  DocGame.cpp  DocGame.h  main.cpp
Engine/DocumentationExample/GameComponents/: InputTargetComponet.h
Engine/DocumentationExample/GameSystems/: ObjectRotatorSystem.cpp  ObjectRotatorSystem.h
Engine/assets/gltf/: balista.glb  balistaShot.glb  duck.glb  enemy.glb  hog.glb  missiles.glb  planet.glb  racc.glb  racc2.glb  singleShroom.glb  singleShroom2.glb  singleShroom3.glb  spaceship.glb  stoneTower.glb  towerBlank.glb  vespa_object.fbx  woodPile.glb  wooden_chest.glb
Engine/assets/shaders/: fragmentShader.frag
Engine/assets/shaders/shaded/: fragmentShaderTextured.frag  vertexShaderTextured.vert
Engine/documentation/: documentation.md
Engine/engine/: CMakeLists.txt
Engine/engine/include/engine/: Context.h  EngineAccessor.h  Events.h  Game.h
Engine/engine/include/engine/assetLoader/: Assets.h
Engine/engine/src/: Context.cpp  EngineAccessor.cpp  Game.cpp
Engine/engine/src/ecs/: ComponentManager.cpp  EntityManager.cpp
Engine/engine/src/renderer/: DrawMeshSystem.cpp  MaterialComponent.cpp  Mesh.cpp  Mesh.h  MeshComponent.cpp  Shader.cpp  Shader.h  ShaderComponent.cpp
Engine/engine/src/sceneGraph/: Transform.cpp
Engine/exampleGame/: CMakeLists.txt  ExampleGame.cpp  ExampleGame.h  main.cpp
Engine/exampleGame/gameComponents/: RotatorComponet.h
Engine/exampleGame/gameSystems/: ObjectRotatorSystem.cpp  ObjectRotatorSystem.h
(+13 files in other folders)
